--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -215,3 +215,8 @@
   </div>
 {% endblock main_content %}
     
+
+{% block script %}
+<script src="{% static 'assets/js/tour.js' %}"></script>
+{% endblock script %}
+  
